--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,19 @@
 <header>
   <nav>
     <ul>
-      <li><a href="<%= new_user_registration_path %>">新規登録</a></li>
-      <li><a href="<%= new_user_session_path %>">サインイン</a></li>
-      <li><a href="<%= public_homes_about_path%>">アバウト</a></li>
-      <li><a href="<%= public_posts_path %>">投稿一覧</a></li>
+      <% if user_signed_in? %>
+        <!-- ログイン後のメニュー -->
+        <li><a href="<%= public_homes_about_path %>">アバウト</a></li>
+        <li><a href="<%= public_posts_path %>">投稿一覧</a></li>
+        <li><a href="<%= mypage_public_user_path(current_user) %>">マイページ</a></li>
+        <li><a href="<%= destroy_user_session_path %>" data-method="delete" rel="nofollow">ログアウト</a></li>
+      <% else %>
+        <!-- ログイン前のメニュー -->
+        <li><a href="<%= new_user_registration_path %>">新規登録</a></li>
+        <li><a href="<%= new_user_session_path %>">サインイン</a></li>
+        <li><a href="<%= public_homes_about_path %>">アバウト</a></li>
+        <li><a href="<%= public_posts_path %>">投稿一覧</a></li>
+      <% end %>
     </ul>
   </nav>
 </header>
