--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -6,6 +6,6 @@
     <title>Bootstrap demo</title>
   </head>
   <body>
-    <h1 class="display-1">ここはtopページ</h1>
+    <h1 class="display-1">ここはTOPページ</h1>
   </body>
 </html>
