--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,2 +1,2 @@
-<h1>Public::Homes#about</h1>
-<p>Find me in app/views/public/homes/about.html.erb</p>
+<h1>ようこそ　Cafe To Cafeへ！</h1>
+<p>今行きたい！気になるカフェを探して、素敵な時間を過ごしましょう♪</p>
